--- a/Dangerous-Dave-Revamp/Assets/Scripts/Tests/Tests.asmdef
+++ b/Dangerous-Dave-Revamp/Assets/Scripts/Tests/Tests.asmdef
@@ -1,5 +1,8 @@
 {
     "name": "Tests",
+    "references": [
+        "MainScripts"
+    ],
     "optionalUnityReferences": [
         "TestAssemblies"
     ]
